--- a/serverless.yml
+++ b/serverless.yml
@@ -39,5 +39,13 @@ functions:
           method: post
           cors: true
           private: true
+  getUser:
+    handler: src/controller.getUser
+    events:
+      - http:
+          path: /getUser
+          method: get
+          cors: true
+          private: true
 
       
